[package]
name = "aescfb"
version = "0.1.0"
authors = ["hazae41 <hazae41@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
aes = "0.4.0"
js-sys = "0.3"
cfb-mode = "0.4.0"
cfb8 = "0.4.0"